--- a/frontend/src/Quiz/css/progressBar.css
+++ b/frontend/src/Quiz/css/progressBar.css
@@ -8,7 +8,7 @@
 
 @keyframes timer {
     100% {
-        /* width: 0%; */
+        width: 0%;
         background: red;
     }
 
@@ -17,6 +17,6 @@
     }
 
     0% {
-        /* width: 100%; */
+        width: 100%;
     }
 }
