--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,7 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  min-height: 100vh;
+}
+
 body {
+  min-height: 100vh;
   margin: 0;
 
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,6 +15,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+div#root {
+  height: 100vh;
 }
 
 code {
